# MongoDB-RabbitMQ_attempts

./: pyproject.toml
noSQL_db/: find.py  models.py  seed.py
rabbitMQ/: consumer.py  models.py  producer.py
