[tool.poetry]
name = "goit-python-web-hw-08"
version = "0.1.0"
description = ""
authors = ["volodymyr-v-konoval <volodymyr.v.konoval@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.29.1"
pymongo = "^4.9.1"
redis = "^5.0.8"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^29.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
